REDO-1047 fixing spacing in save search lightbox

--- a/source/css/scss/app/components/save-search-lightbox.scss
+++ b/source/css/scss/app/components/save-search-lightbox.scss
@@ -19,4 +19,10 @@
 	.save-search-alert-box{
 		margin: 10px 0;
 	}
+
+	.lightbox-content {
+		.inner {
+			padding: 0;
+		}
+	}
 }
